Profile Completion Form Added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,6 @@
     background-color: rgb(12, 12, 12);
     color: white;
   }
+  .profile-div {
+    background-image: url(https://media.tenor.com/i0jurz_PMSEAAAAC/dark-galaxy.gif);
+  }
